# Linear-Regression

./: pyproject.toml
notes/: Assumptions Validity.md  Assumptions.md  Basic Explanation.md  Heuristics & Checks (Code).md  Heuristics & Checks.md
src/: 1_basics.py  2_multiple_lr.py  3_sklearn.py
