[project]
name = "Linear-Regression"
version = "0.1.0"
description = "This project contains all things linear regression - basics, code, use cases, utility functions, etc."
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]
